--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <h2>CountLife</h2>
     <input id="name" type="text" placeholder="Jméno a příjmení.">
-    <input id="year" type="number" step="1" placeholder="Datum narození.">
+    <input id="year" type="number" step="1" placeholder="Rok narození.">
     <button id="but">OK.</button>
     <h3 id="show"></h3>
     <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
