--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -3,6 +3,11 @@ html, body {
   text-align: center;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .form_input{
   font-size: 20px;
   text-align: center;
@@ -25,8 +30,8 @@ html, body {
   border: none;
   padding: 0;
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   overflow: hidden;
   background-color: transparent;
   cursor: pointer;
@@ -39,14 +44,14 @@ html, body {
 }
 
 #obr_logo {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
 }
 
 #header {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 22px;
   justify-content: center;
 }
 
